set fixed height to comments list and add scroll auto if it overflows

--- a/src/components/feed/components/post/components/comments/components/dialog/components/comment-card/components/reply-card/styles.module.css
+++ b/src/components/feed/components/post/components/comments/components/dialog/components/comment-card/components/reply-card/styles.module.css
@@ -1,4 +1,15 @@
 .avatar {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
+}
+
+.comment {
+    margin-top: -3px;
+}
+
+@media screen and (min-width: 600px) {
+    .avatar {
+        height: 30px;
+        width: 30px;
+    }
 }
